# CLS-Stochastic_Simulations

./: README.md
DES-Simulation/: .gitignore  README.md  pyproject.toml
DES-Simulation/src/: file_sys.py  main.py  multi_server_system.py  statistics_util.py  visualize_util.py
Hit-And-Miss-Integration/: .gitignore  CMakeLists.txt  LICENSE  README.md  assingment_1.py
Hit-And-Miss-Integration/images/convergence_improvement/: mandelbrotArea_adaptive.txt  mandelbrotArea_adaptive.txt.bkp2  mandelbrotArea_adaptive.txt.bkp3
Hit-And-Miss-Integration/ortho-pack/: ortho-sampling.c  ortho_sampling_generate.c  ortho_sampling_generate.h
Hit-And-Miss-Integration/ortho-pack/lib/: ortho_sampling_generate.lib
Hit-And-Miss-Integration/simulation_results/: mandelbrotArea_LHS.txt  mandelbrotArea_Ortho.txt  mandelbrotArea_Pure.txt  trueArea.txt
Hit-And-Miss-Integration/simulation_results/same_iter_and_size/: mandelbrotArea_LHS.txt  mandelbrotArea_Ortho.txt  mandelbrotArea_Pure.txt
Hit-And-Miss-Integration/src/: main.py  mandelbrot_analysis.py  metrics.py  utils.py
Predator-Prey-System/: LICENSE  README.md  details_in_data_points_necessary.md  how_to_tune_SA.md  pyproject.toml
Predator-Prey-System/data/: predator-prey-data.csv
Predator-Prey-System/src/: critical_points_check.py  fft_objective.py  importantce_check.py  main.py  optimization_algo.py  peak.py  reduced_combination_check.py  testSA.py  tune_template.py  weighted_objective.py
